--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
-  <!-- <script>
+  <script>
     document.onkeydown = function (e) {
 
       // disable F12 key
@@ -52,7 +52,7 @@
         return false;
       }
     }
-  </script> -->
+  </script>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
