--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" oncontextmenu="return false;">
+<!-- <html lang="en" oncontextmenu="return false;"> -->
+  <html lang="en">
 
 <head>
   <meta charset="utf-8" />
@@ -29,7 +30,7 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
-  <script>
+  <!-- <script>
     document.onkeydown = function (e) {
 
       // disable F12 key
@@ -52,7 +53,7 @@
         return false;
       }
     }
-  </script>
+  </script> -->
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
