--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" oncontextmenu="return false;">
-  <!-- <html lang="en"> -->
+<!-- <html lang="en"> -->
 
 <head>
   <meta charset="utf-8" />
@@ -10,7 +10,15 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7626427506234907"
-     crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7626427506234907"
+    crossorigin="anonymous"></script>
+  <!-- scavangerhunt -->
+  <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7626427506234907" data-ad-slot="7004221037"
+    data-ad-format="auto" data-full-width-responsive="true"></ins>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -55,7 +63,7 @@
         return false;
       }
     }
-  </script> 
+  </script>
 </body>
 
 </html>
