--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
     crossorigin="anonymous"></script>
   <script data-ad-client="ca-pub-7626427506234907" async
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+
+    <script src="https://kit.fontawesome.com/2647a8e79d.js" crossorigin="anonymous"></script>
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
