--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7626427506234907"
+  <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7626427506234907"
     crossorigin="anonymous"></script>
   <script data-ad-client="ca-pub-7626427506234907" async
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
+ -->
 
     <script src="https://kit.fontawesome.com/2647a8e79d.js" crossorigin="anonymous"></script>
   <!--
@@ -62,11 +62,11 @@
     }
   </script>
   <!-- scavangerhunt -->
-  <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7626427506234907" data-ad-slot="7004221037"
+  <!-- <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7626427506234907" data-ad-slot="7004221037"
     data-ad-format="auto" data-full-width-responsive="true"></ins>
   <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
+  </script> -->
 </body>
 
 </html>
